cluster/apps/ingress-dashboard/ingress-dashboard.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-dashboard
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: ingress-dashboard
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app: dashboard
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dashboard
  name: dashboard
  namespace: ingress-dashboard
spec:
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
        - name: dashboard
          image: ghcr.io/reddec/ingress-dashboard:0.2.1
          imagePullPolicy: IfNotPresent
          securityContext:
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
            runAsUser: 101
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: 100Mi
              cpu: 100m
            limits:
              memory: 200Mi
              cpu: 200m
      serviceAccountName: ingress-dashboard
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard
  namespace: ingress-dashboard
  annotations:
    ingress-dashboard/title: "Dashboard"
    ingress-dashboard/description: "Dashboard of ingress resources"
    ingress-dashboard/logo-url: /favicon.ico
spec:
  ingressClassName: nginx
  rules:
    - host: &host dashboard.k8s.devmem.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard
                port:
                  number: 8080
  tls:
    - secretName: null
      hosts:
        - *host
